[package]
name = "interface-lab"
version = "0.1.0"
authors = ["Wang Ruochen <wangkevin920@163.com>"]
edition = "2018"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "1"
actix-web = "2"
actix-http = "1.0"
diesel = { version = "1.4", features = ["sqlite", "r2d2"] }
r2d2 = "0.8"

serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0"

thiserror = "1.0"

uuid = { version = "0.8", features = ["serde", "v4"] }
